# grtlng

./: .gitignore  CMakeLists.txt  README.md  example.gl  grtlng definition
src/: error.c  error.h  global.h  lexer.c  lexer.h  main.c  parser.c  parser.h
src/debug/: debugInfos.c  debugInfos.h  lexer.c  lexer.h  parser.c  parser.h
src/interpret/: interpreter.c  interpreter.h  value.c  value.h
src/parser/: expressions.c  expressions.h  globalScope.c  globalScope.h  parseUtils.c  parseUtils.h  parser.c  parser.h  scoping.c  scoping.h  statements.c  statements.h
src/util/: ArenaAlloc.c  ArenaAlloc.h  ArenaAllocator.c  ArenaAllocator.h  ArrayList.c  ArrayList.h
src/util/file-io/: textfile.c  textfile.h
